--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -419,7 +419,8 @@ footer {
 
     @include breakpoint(lg) {
       font-size: 20px;
-      line-height: 25px;
+      line-height: 36px;
+      margin-top: 1rem;
       height: calc(414px - 280px);
     }
   }
@@ -950,10 +951,10 @@ form {
 .winner-details {
   padding-bottom: 80px !important;
   .tagline {
-    font-size: 70px;
+    font-size: 75px;
     font-family: $tagline-fontfamily;
-    font-weight: bold;
-    line-height: 80px;
+    font-weight: 400;
+    line-height: 120px;
   }
   .logo-title {
     padding: 20px;
@@ -990,6 +991,7 @@ form {
 
       margin-bottom: 20px;
       h4 {
+        padding-top: 10px;
         font-size: 24px;
         line-height: 30px;
         margin-bottom: 20px;
