--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -70,8 +70,10 @@ a.button {
 
 .grecaptcha-badge {
   bottom: 70px !important;
+  z-index: 100;
   @media only screen and(max-width: 500px) {
     bottom: 140px !important
+
   }
 }
 
