--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -373,10 +373,10 @@ footer {
 
   @media (max-width: 600px) {
       p {
-        font-size: 13px;
+        font-size: 13px !important;
       }
       h4 {
-        font-size: 8vw;
+        font-size: 8vw !important;
       }
 
   }
