--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -386,7 +386,7 @@ footer {
   /* height: 20% */
   p {
     font-size: 275%;
-    font-family: "Hackney";
+    font-family: "Avenir";
   }
   @media screen and (max-width: 736px) {
 
@@ -403,7 +403,7 @@ footer {
 
       p {
         font-size: 26px;
-        font-family: "Hackney";
+        font-family: "Avenir";
       }
 
 
