using khmerOSkoulen font

--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -33,11 +33,11 @@ $fanta-prize-border-color: #ffffff;
 $fanta-prize-pagination-color: #000f8b;
 
 // $body-fontfamily: "Unity Text", Helvetica, Arial, sans-serif;
-$body-fontfamily: "Khamer", Helvetica, Arial, sans-serif;
+$body-fontfamily: "KhmerOSKoulen", Helvetica, Arial, sans-serif;
 // $header-fontfamily: 'Unity Headline', Helvetica, Arial, sans-serif;
-$header-fontfamily: "Khamer", Helvetica, Arial, sans-serif;
+$header-fontfamily: "KhmerOSKoulen", Helvetica, Arial, sans-serif;
 // $tagline-fontfamily: "Unity Condensed";
-$tagline-fontfamily: "Khamer";
+$tagline-fontfamily: "KhmerOSKoulen";
 
 $body-font-color: white;
 $body-font-size: 16px;
