--- a/assets/scss/fonts.scss
+++ b/assets/scss/fonts.scss
@@ -117,3 +117,11 @@
   -moz-osx-font-smoothing: grayscale;
   font-weight: 400;
 }
+
+@font-face {
+  font-family: "Koulen-Regular";
+  src: url("/fonts/Koulen-Regular.ttf") format("truetype");
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-weight: 400;
+}
